--- a/pichucalco.html
+++ b/pichucalco.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo">TELESUR RED</div>
-        <div class="tagline">Internet 100% Fibra Óptica</div>
-    </header>
+  <header>
+    <div class="logo">TELESUR RED <span>Pichucalco</span></div>
+    <div class="tagline">Fibra Óptica en Pichucalco</div>
+</header>
     <nav>
         <ul>
             <li><a href="#inicio">Inicio</a></li>
@@ -34,6 +34,11 @@
             </div>
         </section>
         <section id="beneficios">
+          <!-- En beneficios, añade contenido local -->
+<div class="benefit-card">
+  <h3>✅ Cobertura en Pichucalco</h3>
+  <p>Llevamos servicio a colonias como Centro, Solidaridad y Morelos</p>
+</div>
             <h2>¿Por qué elegirnos?</h2>
             <div class="benefits">
                 <div class="benefit-card">
@@ -111,18 +116,19 @@
             </div>
         </section>
         <section id="contacto">
-            <h2>Contáctanos</h2>
-            <div class="contact-info">
-                <div class="contact-card">
-                    <div class="contact-icon">📍</div>
-                    <h3>Dirección</h3>
-                    <p>Boulevard Benito Juárez, frente a Pollo Feliz</p>
-                </div>
-                <div class="contact-card">
-                    <div class="contact-icon">📞</div>
-                    <h3>Teléfono</h3>
-                    <p>+52 932 112 4656</p>
-                </div>
+          <h2>Oficina Pichucalco</h2>
+    <div class="contact-info">
+        <div class="contact-card">
+            <div class="contact-icon">📍</div>
+            <h3>Dirección Pichucalco</h3>
+            <p>Av. Juárez #456, junto al Mercado Municipal</p>
+        </div>
+        <div class="contact-card">
+            <div class="contact-icon">📞</div>
+            <h3>Teléfono Pichucalco</h3>
+            <p>+52 932 555 5678</p>
+        </div>
+    </div>
                 <div class="contact-card">
                     <div class="contact-icon">🌐</div>
                     <h3>Horario</h3>
@@ -224,20 +230,22 @@
         </section>
     </div>
     <footer>
-        <div class="location-selector">
-            <h3>Selecciona tu ubicación:</h3>
-            <a href="index.html" class="btn active">Juarez</a>
-            <a href="reforma.html" class="btn">Reforma</a>
-            <a href="pichucalco.html" class="btn">Pichucalco</a>
-        </div>
-        <p>TELESUR RED - Conectamos tu mundo</p>
-        <p>© 2023 Todos los derechos reservados</p>
-    </footer>
-    <a href="https://wa.me/529321124656?text=Hola,%20quiero%20información%20sobre%20TELESUR%20RED"
-       class="whatsapp-button"
-       target="_blank">
-       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
-    </a>
+      <script>
+        const currentLocation = 'pichucalco'; // Cambiar a 'reforma' o 'pichucalco' en sus archivos
+    </script>
+    
+      <div class="location-selector">
+          <h3>Selecciona tu ubicación:</h3>
+          <a href="index.html" class="btn">Principal</a>
+          <a href="reforma.html" class="btn">Reforma</a>
+          <a href="pichucalco.html" class="btn active">Pichucalco</a>
+      </div>
+      <p>TELESUR RED Pichucalco - Servicio local confiable</p>
+  </footer>
+    <!-- WhatsApp con número de Pichucalco -->
+<a href="https://wa.me/529325555678?text=Hola,%20soy%20de%20Pichucalco%20y%20necesito%20ayuda" class="whatsapp-button">
+  <img src="whatsapp-icon.svg" alt="WhatsApp">
+</a>
     <button class="theme-toggle" id="theme-toggle">🌓</button>
     <script src="script.js"></script>
 </body>
