--- a/reforma.html
+++ b/reforma.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo">TELESUR RED</div>
-        <div class="tagline">Internet 100% Fibra Óptica</div>
-    </header>
+  <header>
+    <div class="logo">TELESUR RED <span>Reforma</span></div>
+    <div class="tagline">Internet 100% Fibra Óptica en Reforma</div>
+</header>
     <nav>
         <ul>
             <li><a href="#inicio">Inicio</a></li>
@@ -111,18 +111,19 @@
             </div>
         </section>
         <section id="contacto">
-            <h2>Contáctanos</h2>
-            <div class="contact-info">
-                <div class="contact-card">
-                    <div class="contact-icon">📍</div>
-                    <h3>Dirección</h3>
-                    <p>Boulevard Benito Juárez, frente a Pollo Feliz</p>
-                </div>
-                <div class="contact-card">
-                    <div class="contact-icon">📞</div>
-                    <h3>Teléfono</h3>
-                    <p>+52 932 112 4656</p>
-                </div>
+          <h2>Contáctanos en Reforma</h2>
+          <div class="contact-info">
+              <div class="contact-card">
+                  <div class="contact-icon">📍</div>
+                  <h3>Dirección Reforma</h3>
+                  <p>Calle Central #123, frente al Parque Principal</p>
+              </div>
+              <div class="contact-card">
+                  <div class="contact-icon">📞</div>
+                  <h3>Teléfono Reforma</h3>
+                  <p>+52 932 555 1234</p>
+              </div>
+          </div>
                 <div class="contact-card">
                     <div class="contact-icon">🌐</div>
                     <h3>Horario</h3>
@@ -224,20 +225,22 @@
         </section>
     </div>
     <footer>
-        <div class="location-selector">
-            <h3>Selecciona tu ubicación:</h3>
-            <a href="index.html" class="btn active">Juarez</a>
-            <a href="reforma.html" class="btn">Reforma</a>
-            <a href="pichucalco.html" class="btn">Pichucalco</a>
-        </div>
-        <p>TELESUR RED - Conectamos tu mundo</p>
-        <p>© 2023 Todos los derechos reservados</p>
+      <script>
+        const currentLocation = 'Reforma'; // Cambiar a 'reforma' o 'pichucalco' en sus archivos
+    </script>
+    
+      <div class="location-selector">
+        <h3>Selecciona tu ubicación:</h3>
+        <a href="index.html" class="btn">Principal</a>
+        <a href="reforma.html" class="btn active">Reforma</a>
+        <a href="pichucalco.html" class="btn">Pichucalco</a>
+    </div>
+    <p>TELESUR RED Reforma - Conexión local de alta velocidad</p>
     </footer>
-    <a href="https://wa.me/529321124656?text=Hola,%20quiero%20información%20sobre%20TELESUR%20RED"
-       class="whatsapp-button"
-       target="_blank">
-       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
-    </a>
+    <!-- Botón de WhatsApp actualizado para Reforma -->
+<a href="https://wa.me/529325551234?text=Hola,%20soy%20de%20Reforma%20y%20quiero%20información" class="whatsapp-button">
+  <img src="whatsapp-icon.svg" alt="WhatsApp">
+</a>
     <button class="theme-toggle" id="theme-toggle">🌓</button>
     <script src="script.js"></script>
 </body>
